--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
-annotated-types==0.6.0
-certifi==2024.2.2
+certifi==2024.2.2 #!!!!!!!!!!!!!!!!
 cffi==1.16.0
-charset-normalizer==3.3.2
+charset-normalizer==3.3.2 #!!!!!!!!!!!
 cryptography==42.0.5
 cssselect==1.2.0
 decorator==4.4.2
-idna==3.6
+idna==3.6 #!!!!!!!!!!!!!!!
 imageio==2.34.0
 imageio-ffmpeg==0.4.9
-instagrapi==2.1.1
-instaloader==4.11
+instaloader==4.11 #!!!!!!!!!!!!
 lxml==5.1.0
 moviepy==1.0.3
 ntplib==0.4.0
@@ -17,14 +15,9 @@ numpy==1.26.4
 pillow==10.2.0
 proglog==0.1.10
 pycparser==2.21
-pycryptodomex==3.20.0
-pydantic==2.6.4
-pydantic_core==2.16.3
 pyotp==2.9.0
 pyquery==2.0.0
-PySocks==1.7.1
-pyTelegramBotAPI==4.16.1
-requests==2.31.0
+pyTelegramBotAPI==4.16.1 #!!!!!!!!!!!!!!
+requests==2.31.0 #!!!!!!!!!!!
 tqdm==4.66.2
-typing_extensions==4.11.0
-urllib3==2.2.1
+urllib3==2.2.1 #!!!!!!!!!!!!!!!!!
